--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,25 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include layout="@layout/layout_toolbar"/>
+    <include layout="@layout/layout_main"/>
 
-    <Button
-        android:id="@+id/main_btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="发送事件"
-        android:layout_centerInParent="true"/>
+    <LinearLayout
+        android:layout_width="300dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="left"
+        android:background="#00ff00"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/main_tv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/colorAccent"
-        android:text="@string/app_name"
-        android:padding="6dp"
-        android:layout_below="@+id/toolbar"/>
+        <include layout="@layout/layout_menu"/>
 
-</RelativeLayout>
+    </LinearLayout>
+
+</android.support.v4.widget.DrawerLayout>
