--- a/app/src/main/res/layout/item_menu.xml
+++ b/app/src/main/res/layout/item_menu.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingLeft="6dp"
-    android:paddingTop="8dp"
-    android:paddingBottom="8dp"
+    android:paddingTop="12dp"
+    android:paddingBottom="12dp"
     android:paddingRight="12dp"
     android:gravity="center_vertical">
 
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:textSize="14sp"
         android:text="@string/app_name"
+        android:textStyle="bold"
         android:layout_marginLeft="12dp"
-        android:drawableRight="@mipmap/ic_more"
         android:gravity="center_vertical"/>
 </LinearLayout>
