--- a/app/src/main/res/layout/layout_main.xml
+++ b/app/src/main/res/layout/layout_main.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <include layout="@layout/layout_toolbar"/>
+
     <FrameLayout
         android:id="@+id/main_content"
         android:layout_width="match_parent"
