--- a/app/src/main/res/layout/layout_menu.xml
+++ b/app/src/main/res/layout/layout_menu.xml
@@ -3,53 +3,53 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#FAFBFC">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="12dp">
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:paddingLeft="16dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:background="@color/colorPrimary">
 
         <ImageView
             android:id="@+id/menu_iv_header"
             android:layout_width="72dp"
             android:layout_height="72dp"
-            android:src="@mipmap/ic_launcher_round"/>
+            android:src="@mipmap/ic_launcher_round" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="center_vertical"
-            android:layout_marginLeft="12dp">
+        <TextView
+            android:id="@+id/menu_tv_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textColor="@color/clr_white"
+            android:text="@string/menu_tv_name"
+            android:layout_marginTop="8dp"
+            android:typeface="serif"
+            android:textStyle="bold"/>
 
-            <TextView
-                android:id="@+id/menu_tv_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="14sp"
-                android:textColor="@color/colorAccent"
-                android:text="@string/app_name"/>
-
-            <TextView
-                android:id="@+id/menu_tv_project_address"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="14sp"
-                android:textColor="@color/colorAccent"
-                android:text="@string/app_name"
-                android:layout_marginTop="12dp"/>
-
-        </LinearLayout>
+        <TextView
+            android:id="@+id/menu_tv_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            android:textColor="@color/clr_white"
+            android:text="@string/menu_tv_info"
+            android:layout_marginTop="6dp"
+            android:typeface="serif"
+            android:textStyle="bold"/>
 
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/menu_rv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingLeft="6dp"/>
+        android:layout_height="0dp"
+        android:paddingLeft="6dp"
+        android:layout_weight="3"
+        android:background="@color/clr_F1F8F7"/>
 
 </LinearLayout>
